<resources>
    <string name="app_name">daApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm">Confirm password and password must be the same</string>
    <string name="invalid_fullName">Please fill in your FullName</string>
    <string name="invalid_lastname">Please fill in your lastname</string>
    <string name="invalid_address">Please fill in your address</string>
    <string name="invalid_city">Please choose your city</string>
    <string name="invalid_dob">Please choose your date of birth</string>
    <string name="invalid_primary_language">Please specify your primary language</string>
    <string name="invalid_requried_field">This field is required</string>
    <string name="invalid_end_date">End date must be at least 2 days from now</string>
    <string name="invalid_img_over">Total image upload is 5 MB</string>
    <string name="invalid_fee">Fee per hour must be number</string>
    <string name="invalid_fee_max">Fee per hour is max at 500.000</string>
    <string name="invalid_bank_name">Please fill in your bank name</string>
    <string name="invalid_account_no">Please fill in your account no</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_hint_confirm_password">Re-type password</string>
    <string name="field_hint_address">Address</string>
    <string name="field_hint_last_name">Last Name</string>
    <string name="field_hint_full_name">Full Name</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!--Bundle Key-->
    <string name="key_request_id">requestId</string>
    <string name="action_sign_up">Sign up</string>

    <!--Message Common-->
    <string name="mes_error_400">There is something wrong happen, please try again</string>
    <string name="mes_error_401">We can not authenticate your request, please try again after login</string>
    <string name="mes_error_403">You are not authorized to use this operation</string>
    <string name="mes_error_validate">Your form is not valid</string>
    <string name="major_invalid">Please choose a major</string>
    <!--Login-->
    <string name="mes_error_login_fail">Email or password is not correct</string>

    <!--Message Register-->
    <string name="mes_register_success">You have signed up successfully</string>
    <string name="mes_register_email_exist">This email is already existed</string>

    <!--Edit Profile-->
    <string name="mes_edit_profile_success">Your profile has been updated</string>

    <!--Change Password-->
    <string name="mes_change_password_success">Your password has been updated</string>
    <string name="mes_change_password_fail">Your current password is not correct</string>

    <!--Expert Apply-->
    <string name="mes_expert_apply_confirm">Do you really want to apply ?</string>
    <string name="mes_expert_apply_success">Your application is submitted</string>
    <string name="mes_expert_apply_fail">This problem request is unavailable</string>

    <!--Expert Accept-->
    <string name="mes_accept_expert_confirm">Do you really want to accept this expert ?</string>
    <string name="mes_accept_expert_success">Expert has been accepted</string>
    <string name="mes_accept_expert_fail"></string>

    <!--Logout-->
    <string name="mes_logout_confirm">Do you really want to logout</string>

    <!--Edit Request-->
    <string name="mes_edit_request_success">Your request has been updated</string>

    <!--Communication-->
    <string name="mes_estimate_confirm">Do you really want to accept this offer</string>
    <string name="mes_estimate_sent">Estimate has been sent</string>
    <string name="mes_estimate_yes">Estimate has been accepted</string>
    <string name="mes_estimate_no">Estimate has been rejected</string>
    <string name="mes_cancel_yes">Estimate has been rejected</string>
    <string name="mes_cancel">You has canceled this request, please wait for your partner to confirm</string>
    <string name="mes_cancel_confirm">Do you really want to cancel this request ?</string>
    <string name="mes_complete_yes">Great, your request has been completed</string>
    <string name="mes_complete">You has completed this request, please wait for your partner to confirm</string>
    <string name="mes_complete_confirm">Do you really want to complete this request ?</string>


    <string name="title_activity_expert">ExpertActivity</string>
    <string name="field_hint_fee">Fee per hour (VND)</string>
    <string name="adapter_all">All</string>
    <string name="isExpert">isExpert</string>
    <string name="communication_menu_cancel">Cancel</string>
    <string name="communication_menu_estimate">Estimate</string>
    <string name="communication_menu_complete">Complete</string>

    <string name="camera_permission_deny">You can not start video call with out camera and audio</string>
    <string name="call_receive">You receive a call, would you like to answer</string>
    <string name="forget_password_success">Please check your email for new password</string>
    <string name="forget_password_no_email">We can not find your account, please check your email</string>

    <string-array name="account_type_array">
        <item>Customer</item>
        <item>Computer Expert</item>
    </string-array>

    <string-array name="language_arrays">
        <item>Vietnamese</item>
        <item>English</item>
    </string-array>
    <string-array name="city_arrays">
        <item>TP.HCM</item>
        <item>Hà Nội</item>
    </string-array>
    <string-array name="time_arrays">
        <item>This week</item>
        <item>Last 2 week</item>
        <item>Last 3 week</item>
        <item>This month</item>
    </string-array>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
</resources>
