<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.other.UnAuthActivity">

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

                <EditText
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/username"
                    android:background="@drawable/edt_text_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email" />

                <EditText
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:id="@+id/password"
                    android:background="@drawable/edt_text_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <Button
                            android:layout_marginRight="30dp"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/my_button"
                            android:id="@+id/btnLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/action_sign_in"
                            android:layout_marginEnd="30dp" />
                        <Button
                            android:layout_marginLeft="30dp"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/my_button"
                            android:id="@+id/btnRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/action_register"
                            android:layout_marginStart="30dp" />
                </LinearLayout>

        </LinearLayout>


</LinearLayout>