<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.other.UnAuthActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_marginBottom="20dp"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="2"
                android:gravity="start"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:src="@drawable/ic_back"
                    android:id="@+id/btnBack"
                    android:textColor="@color/colorWhite"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"
                    android:text="Customer Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:paddingRight="10dp"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:src="@drawable/ic_check_tool_bar"
                    android:id="@+id/btnCustomerRegister"
                    android:textColor="@color/colorWhite"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <LinearLayout
        android:paddingHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:maxLength="255"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/edt_text_box"
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:maxLength="255"
        android:drawableLeft="@drawable/ic_fullname"
        android:drawableStart="@drawable/ic_fullname"
        android:drawablePadding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/edt_text_box"
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_hint_full_name"
        android:imeActionLabel="@string/action_sign_in_short"

        android:inputType="text"
        />

    <EditText
        android:maxLength="20"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/edt_text_box"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
 />

    <EditText
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/edt_text_box"
        android:id="@+id/edtConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_hint_confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

        <EditText
            android:maxLength="255"
            android:drawableLeft="@drawable/ic_address"
            android:drawableStart="@drawable/ic_address"
            android:drawablePadding="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edt_text_box"
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_hint_address"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
             />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/edt_text_box_no_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="City"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spn_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Date of birth: "
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtEndDate"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="04/03/2020"
                    android:paddingHorizontal="10dp"
                    android:textSize="20sp" />

                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/btnChooseDate"
                        android:background="@drawable/my_button"
                        android:src="@drawable/ic_insert_invitation_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_text_box_no_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="Language"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spn_primary_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</LinearLayout>