<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expertReg.RegisterExpertFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="2"
                android:gravity="start"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:src="@drawable/ic_back"
                    android:id="@+id/btnBack"
                    android:textColor="@color/colorWhite"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:text="Computer Expert Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:paddingRight="10dp"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:src="@drawable/ic_check_tool_bar"
                    android:id="@+id/btnExpertRegister"
                    android:textColor="@color/colorWhite"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_text_box"
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:drawableLeft="@drawable/ic_fullname"
                android:drawableStart="@drawable/ic_fullname"
                android:drawablePadding="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box"
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_full_name"
                android:imeActionLabel="@string/action_sign_in_short"

                android:inputType="text"
                />

            <EditText
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box"
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                />

            <EditText
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box"
                android:id="@+id/edtConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box_no_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="Major"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_major"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <EditText
                android:drawableLeft="@drawable/ic_attach_money_black_24dp"
                android:drawableStart="@drawable/ic_attach_money_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box"
                android:id="@+id/edtFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_fee"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                />

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:background="@drawable/edt_text_box_no_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="Bank name "
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:paddingHorizontal="5dp"
                    android:id="@+id/edtBankName"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="@drawable/edt_text_box_no_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="Account No"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:paddingHorizontal="5dp"
                    android:id="@+id/edtAccountNo"
                    android:background="@null"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Description:"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/edtDescription"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:background="@drawable/edt_text_box"
                    android:scrollbars="vertical" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>